src/Sci.NET.Native/include/mathematics/trigonometry.h

SDN_DLL_EXPORT_API csc2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sec2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sec2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cot2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cot2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API csch_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API csch_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sech_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sech_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API coth_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API coth_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API csch2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API csch2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sech2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sech2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API coth2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API coth2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acsc_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acsc_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asec_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asec_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acot_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acot_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acsc2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acsc2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asec2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asec2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acot2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acot2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asech_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asech_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acoth_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acoth_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asech2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asech2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acoth2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acoth2_fp64(double *a, double *b, int64_t n);