src/Sci.NET.CUDA/Native/TrigonometryNativeMethods.cs


    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "csc2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Csc2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sec2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Sec2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sec2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Sec2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "cot2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Cot2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "cot2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Cot2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "csch_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode CschFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "csch_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode CschFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sech_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SechFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sech_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode SechFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "coth_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode CothFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "coth_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode CothFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "csch2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Csch2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "csch2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Csch2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sech2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Sech2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "sech2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Sech2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "coth2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Coth2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "coth2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Coth2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acsc_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcscFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acsc_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcscFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asec_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AsecFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asec_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AsecFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acot_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcotFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acot_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcotFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acsc2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acsc2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acsc2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acsc2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asec2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Asec2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asec2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Asec2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acot2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acot2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acot2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acot2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acscch_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcscchFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acscch_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcscchFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asech_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AsechFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asech_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AsechFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acoth_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcothFp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acoth_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode AcothFp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acscch2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acscch2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acscch2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acscch2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asech2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Asech2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "asech2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Asech2Fp64(double* a, double* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acoth2_fp32", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acoth2Fp32(float* a, float* b, long n);

    [DllImport(NativeMethods.NativeLibrary, EntryPoint = "acoth2_fp64", CallingConvention = CallingConvention.Cdecl)]
    public static extern unsafe SdnApiStatusCode Acoth2Fp64(double* a, double* b, long n);
}